--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main>
     <div class="firstcolumn">
       <h2>Aktuella Filmer</h2>
-      <p>Här listar vi från JSON de filmer som finns tillgängliga, klickabara för att komma till sida med info.
+      <p>Här listar vi från JSON de filmer som finns tillgängliga, klickbara för att komma till sida med info.
         Eventuellt kommer infon upp i rutan intill eller nedan.</p>
       <p class="movieClick" onclick="readJson('Gladiator');">Gladiator</p>
       <p class="movieClick" onclick="readJson('Big Hero 6');">Big Hero 6</p>
