--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
       <p>Onsdag kl 19:00 - Salong B</p>
       <p>Onsdag kl 21:00 - Salong B</p>
 
-      <div class="seatingBooking">
-        <p>XXXXXXOXXOOOXXXXOOXXX</p>
-        <p>XOXXXXOXXXXXXXXXOOXXX</p>
-        <p>XXXXXXOXXXXXXXXXOOXXX</p>
-        <p>XOOXXXOXXXXXXXXXOOXXX</p>
-        <p>XXXXXXOXXXXOOOXXOOXXX</p>
-      </div>
+    
+    <div class="seatingBooking">
+      <p class="film">Film: </p>
+      <p class="salong">Vald salong: </p>
+      <p class="dateTime">Datum & tid: </p>
+      <p class="nrSeats">Antal platser kvar: </p>
+     </div>
 
     </div>
   </main>
@@ -85,6 +85,9 @@
       <p><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
     </div>
   </footer>
+   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="SeatsBookingView.js"></script>
 </body>
 
 </html>
