La till bilder i informationen

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="secondcolumn">
-      <p id="test">GREENLAND
+      <p>GREENLAND
         <br><br> Här kan vi visa info om vald film.
         <br> Imdb: 7.2
         <br> Runtime: 123 min
