--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 
   <header>
     <nav>
-      <a href="index.html"><div class="logo">
-        <h1>FILMVISARNA!</h1>
-      </div></a>
+      <a href="index.html">
+        <div class="logo">
+          <h1>FILMVISARNA!</h1>
+        </div>
+      </a>
       <div class="menu">
         <a href="index.html">Hem</a>
         <a href="kontakt.html">Kontakta oss</a>
@@ -34,14 +36,14 @@
   </header>
 
   <main>
-    <div class="firstcolumn">
+    <!--   <div class="firstcolumn">
       <h2>Aktuella Filmer</h2>
       <p class="movieClick" onclick="readJson('Gladiator');">Gladiator</p>
       <p class="movieClick" onclick="readJson('Big Hero 6');">Big Hero 6</p>
       <p class="movieClick" onclick="readJson('Braveheart');">Braveheart</p>
       <p class="movieClick" onclick="readJson('The Dark Knight');">The Dark Knight</p>
       <p class="movieClick" onclick="readJson('Good Will Hunting');">Good Will Hunting</p>
-    </div>
+    </div>-->
 
     <div class="secondcolumn">
       <p>GREENLAND
@@ -54,22 +56,23 @@
 
     <div class="thirdcolumn">
       <div class="schema">
-      <p class="schemarubrik"></p>
-      <div class="schedule">
-      <p>Välj tid, datum och salong för vald film</p>
-      
-     </div>
-</div>
-    
-    <div align = center class="seatingBooking">
-      <p class="film"></p>
-      <p class="salong"></p>
-      <p class="dateTime"></p>
-      <p class="nrSeats">Antal platser kvar: </p>
-      <div class = "movieScreen" align=center>
-      <p>Bioduken</p><p>
-    </div>
-  </div>
+        <p class="schemarubrik"></p>
+        <div class="schedule">
+          <p>Välj tid, datum och salong för vald film</p>
+
+        </div>
+      </div>
+
+      <div align=center class="seatingBooking">
+        <p class="film"></p>
+        <p class="salong"></p>
+        <p class="dateTime"></p>
+        <p class="nrSeats">Antal platser kvar: </p>
+        <div class="movieScreen" align=center>
+          <p>Bioduken</p>
+          <p>
+        </div>
+      </div>
     </div>
   </main>
 
@@ -84,10 +87,11 @@
       <p><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
     </div>
   </div>
-   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="SeatsBookingView.js"></script>
   <script src="filmer.js"></script>
+  <script src="Aktuellt.js"></script>
 </body>
 
 </html>
