--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   </header>
 
   <main>
-    <!--   <div class="firstcolumn">
-      <h2>Aktuella Filmer</h2>
-      <p class="movieClick" onclick="readJson('Gladiator');">Gladiator</p>
+    <div class="firstcolumn"></div>
+    <h2>Aktuella Filmer</h2>
+    <!--  <p class="movieClick" onclick="readJson('Gladiator');">Gladiator</p>
       <p class="movieClick" onclick="readJson('Big Hero 6');">Big Hero 6</p>
       <p class="movieClick" onclick="readJson('Braveheart');">Braveheart</p>
       <p class="movieClick" onclick="readJson('The Dark Knight');">The Dark Knight</p>
