Fixade till div i första kolumnen

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
   </header>
 
   <main>
-    <div class="firstcolumn"></div>
-    <h2>Aktuella Filmer</h2>
-    <!--  <p class="movieClick" onclick="readJson('Gladiator');">Gladiator</p>
+    <div class="firstcolumn">
+      <h2>Aktuella Filmer</h2>
+      <!--  <p class="movieClick" onclick="readJson('Gladiator');">Gladiator</p>
       <p class="movieClick" onclick="readJson('Big Hero 6');">Big Hero 6</p>
       <p class="movieClick" onclick="readJson('Braveheart');">Braveheart</p>
       <p class="movieClick" onclick="readJson('The Dark Knight');">The Dark Knight</p>
-      <p class="movieClick" onclick="readJson('Good Will Hunting');">Good Will Hunting</p>
-    </div>-->
+      <p class="movieClick" onclick="readJson('Good Will Hunting');">Good Will Hunting</p> -->
+    </div>
 
     <div class="secondcolumn">
       <p>GREENLAND
