--- a/index.html
+++ b/index.html
@@ -46,19 +46,15 @@
     </div>
 
     <div class="secondcolumn">
-      <p>GREENLAND
-        <br><br> Här kan vi visa info om vald film.
-        <br> Imdb: 7.2
-        <br> Runtime: 123 min
-        <br> Actor: Gerard Butler
-      </p>
+      <img class="firstimage" src="https://image.freepik.com/free-vector/vector-illustration-movie-time-background_44392-56.jpg" alt="">
+      
     </div>
 
     <div class="thirdcolumn">
       <div class="schema">
         <p class="schemarubrik"></p>
         <div class="schedule">
-          <p>Välj tid, datum och salong för vald film</p>
+          <p>Välj tid, datum och salong i listan nedan</p>
 
         </div>
       </div>
