--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
   <script src="SeatsBookingView.js"></script>
   <script src="filmer.js"></script>
   <script src="Aktuellt.js"></script>
+  <p>test</p>
 </body>
 
 </html>
