Added new file and script
stareted function for tickettyp
and script biljettyp in Html

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
     </div>
 
     <div class="secondcolumn">
-      <img class="firstimage" src="https://image.freepik.com/free-vector/vector-illustration-movie-time-background_44392-56.jpg" alt="">
-      
+      <img class="firstimage"
+        src="https://image.freepik.com/free-vector/vector-illustration-movie-time-background_44392-56.jpg" alt="">
+
     </div>
 
     <div class="thirdcolumn">
@@ -89,7 +90,8 @@
   <script src="SeatsbookingView.js"></script>
   <script src="filmer.js"></script>
   <script src="Aktuellt.js"></script>
- 
+  <script src="Biljetttyp.js"></script>
+
 </body>
 
 </html>
