Added function for tickets
added a dropdownlist for choosing tickets,

--- a/index.html
+++ b/index.html
@@ -58,20 +58,24 @@
           <p>Välj tid, datum och salong i listan nedan</p>
 
         </div>
-      </div>
+        <div id="container"></div>
+        <br>
+        <div>
+          <button id="Välj">Välj</button>
+        </div>
 
-      <div align=center class="seatingBooking">
-        <p class="film"></p>
-        <p class="salong"></p>
-        <p class="dateTime"></p>
-        <p class="nrSeats">Antal platser kvar: </p>
-        <div class="summaryTickets"></div>
-        <div class="movieScreen" align=center>
-          <p>Bioduken</p>
-          <p>
+        <div align=center class="seatingBooking">
+          <p class="film"></p>
+          <p class="salong"></p>
+          <p class="dateTime"></p>
+          <p class="nrSeats">Antal platser kvar: </p>
+          <div class="summaryTickets"></div>
+          <div class="movieScreen" align=center>
+            <p>Bioduken</p>
+            <p>
+          </div>
         </div>
       </div>
-    </div>
   </main>
 
   <div class="footer">
