Added dropdown menu instead of a long list and populated with dates, time and salong

--- a/index.html
+++ b/index.html
@@ -52,11 +52,18 @@
     </div>
 
     <div class="thirdcolumn">
+
+
+
+
       <div class="schema">
         <p class="schemarubrik"></p>
         <div class="schedule">
-          <p>Välj tid, datum och salong i listan nedan</p>
-
+          <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Välj datum, tid och salong här!</button>
+  <div id="myDropdown" class="dropdown-content">
+  </div>
+</div>
         </div>
       </div>
 
@@ -64,11 +71,10 @@
         <p class="film"></p>
         <p class="salong"></p>
         <p class="dateTime"></p>
-        <p class="nrSeats">Antal platser kvar: </p>
+        <p class="nrSeats"></p>
         <div class="summaryTickets"></div>
         <div class="movieScreen" align=center>
           <p>Bioduken</p>
-          <p>
         </div>
       </div>
     </div>
