--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     <div class="secondcolumn">
       <img class="firstimage"
         src="https://image.freepik.com/free-vector/vector-illustration-movie-time-background_44392-56.jpg" alt="">
-
     </div>
 
     <div class="thirdcolumn">
@@ -60,10 +59,10 @@
         <p class="schemarubrik"></p>
         <div class="schedule">
           <div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Välj datum, tid och salong här!</button>
-  <div id="myDropdown" class="dropdown-content">
-  </div>
-</div>
+            <button onclick="myFunction()" class="dropbtn">Välj datum, tid och salong här!</button>
+            <div id="myDropdown" class="dropdown-content">
+            </div>
+          </div>
         </div>
       </div>
 
@@ -80,7 +79,7 @@
     </div>
   </main>
 
-  <div class="footer">
+  <footer class="footer">
     <div class="leftFoot">
       <p>Vattenfallsgatan 15, Göteborg</p>
     </div>
@@ -90,7 +89,7 @@
     <div class="rightFoot">
       <p><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
     </div>
-  </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="SeatsbookingView.js"></script>
