--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
     </script>
   <!--Link to the movie "Gladiator" JavaScript file.-->
-  <script src="filmer.js"></script>
-  <script src="SeatsBookingView.js"></script>
+  <script src="/JS/filmer.js"></script>
+  <script src="/JS/SeatsbookingView.js"></script>
+  <script src="/JS/Aktuellt.js"></script>
+  <script src="/JS/Biljetttyp.js"></script>
 
 
   <header>
@@ -95,8 +97,7 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="SeatsbookingView.js"></script>
   <script src="filmer.js"></script>
-  <script src="Aktuellt.js"></script>
-  <script src="Biljetttyp.js"></script>
+
 
 </body>
 
