--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Filmvisarna</title>
   <link rel="icon" type="image/png" href="/images/FV.png" />
   <link href="https://fonts.googleapis.com/css2?family=David+Libre&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -54,9 +54,6 @@
     </div>
 
     <div class="thirdcolumn">
-
-
-
 
       <div class="schema">
         <p class="schemarubrik"></p>
