--- a/index.html
+++ b/index.html
@@ -1,103 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Filmvisarna</title>
+    <link rel="icon" type="image/png" href="/images/FV.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=David+Libre&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Filmvisarna</title>
-  <link rel="icon" type="image/png" href="/images/FV.png" />
-  <link href="https://fonts.googleapis.com/css2?family=David+Libre&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <!--Link for jQuery-->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <!--Link to the movie "Gladiator" JavaScript file.-->
+    <script src="filmer.js"></script>
+    <script src="SeatsBookingView.js"></script>
 
-<body>
-  <!--Link for jQuery-->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
-    </script>
-  <!--Link to the movie "Gladiator" JavaScript file.-->
-  <script src="filmer.js"></script>
-  <script src="SeatsBookingView.js"></script>
-
-
-  <header>
-    <nav>
-      <a href="index.html">
-        <div class="logo">
-          <h1>FILMVISARNA!</h1>
+    <header>
+      <nav>
+        <a href="index.html">
+          <div class="logo">
+            <h1>FILMVISARNA!</h1>
+          </div>
+        </a>
+        <div class="menu">
+          <a href="index.html">Hem</a>
+          <a href="kontakt.html">Kontakta oss</a>
+          <a href="omoss.html">Om oss</a>
         </div>
-      </a>
-      <div class="menu">
-        <a href="index.html">Hem</a>
-        <a href="kontakt.html">Kontakta oss</a>
-        <a href="omoss.html">Om oss</a>
-      </div>
-      <a class="login" href="login.html">login</a>
-    </nav>
-  </header>
+        <a class="login" href="login.html">login</a>
+      </nav>
+    </header>
 
-  <main>
-    <div class="firstcolumn">
-      <h2>Aktuella Filmer</h2>
-      <!--  <p class="movieClick" onclick="readJson('Gladiator');">Gladiator</p>
+    <main>
+      <div class="firstcolumn">
+        <h2>Aktuella Filmer</h2>
+        <!--  <p class="movieClick" onclick="readJson('Gladiator');">Gladiator</p>
       <p class="movieClick" onclick="readJson('Big Hero 6');">Big Hero 6</p>
       <p class="movieClick" onclick="readJson('Braveheart');">Braveheart</p>
       <p class="movieClick" onclick="readJson('The Dark Knight');">The Dark Knight</p>
       <p class="movieClick" onclick="readJson('Good Will Hunting');">Good Will Hunting</p> -->
-    </div>
+      </div>
 
-    <div class="secondcolumn">
-      <img class="firstimage"
-        src="https://image.freepik.com/free-vector/vector-illustration-movie-time-background_44392-56.jpg" alt="">
-    </div>
+      <div class="secondcolumn">
+        <div class="moviecolumn">
+          <img
+            class="firstimage"
+            src="https://image.freepik.com/free-vector/vector-illustration-movie-time-background_44392-56.jpg"
+            alt=""
+          />
+        </div>
 
-    <div class="thirdcolumn">
+        <div class="partTwoSecondColumn">
+          <div class="schema">
+            <p class="schemarubrik"></p>
+            <div class="schedule"></div>
 
-
-
-
-      <div class="schema">
-        <p class="schemarubrik"></p>
-        <div class="schedule">
-          <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Välj datum, tid och salong här!</button>
-            <div id="myDropdown" class="dropdown-content">
+            <div align="center" class="seatingBooking">
+              <p class="film"></p>
+              <p class="salong"></p>
+              <p class="dateTime"></p>
+              <p class="nrSeats"></p>
+              <div class="summaryTickets"></div>
+              <div class="movieScreen" align="center">
+                <p>Bioduken</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </main>
 
-      <div align=center class="seatingBooking">
-        <p class="film"></p>
-        <p class="salong"></p>
-        <p class="dateTime"></p>
-        <p class="nrSeats"></p>
-        <div class="summaryTickets"></div>
-        <div class="movieScreen" align=center>
-          <p>Bioduken</p>
-        </div>
+    <footer class="footer">
+      <div class="leftFoot">
+        <p>Vattenfallsgatan 15, Göteborg</p>
       </div>
-    </div>
-  </main>
-
-  <footer class="footer">
-    <div class="leftFoot">
-      <p>Vattenfallsgatan 15, Göteborg</p>
-    </div>
-    <div class="middleFoot">
-      <p>0707-001020</p>
-    </div>
-    <div class="rightFoot">
-      <p><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
-    </div>
-  </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="SeatsbookingView.js"></script>
-  <script src="filmer.js"></script>
-  <script src="Aktuellt.js"></script>
-  <script src="Biljetttyp.js"></script>
-
-</body>
-
+      <div class="middleFoot">
+        <p>0707-001020</p>
+      </div>
+      <div class="rightFoot">
+        <p><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
+      </div>
+    </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="SeatsbookingView.js"></script>
+    <script src="filmer.js"></script>
+    <script src="Aktuellt.js"></script>
+    <script src="Biljetttyp.js"></script>
+  </body>
 </html>
