--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <!--Link to the movie "Gladiator" JavaScript file.-->
-  <script src="filmer.js"></script>
-  <script src="SeatsBookingView.js"></script>
+  <!-- <script src="filmer.js"></script>
+  <script src="SeatsBookingView.js"></script> -->
 
   <header>
     <nav>
@@ -83,11 +83,10 @@
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="SeatsbookingView.js"></script>
-  <script src="filmer.js"></script>
-  <script src="Aktuellt.js"></script>
-  <script src="Biljetttyp.js"></script>
-  <script src="booking.js"></script>
+  <script src="./js/SeatsbookingView.js"></script>
+  <script src="./js/filmer.js"></script>
+  <script src="./js/Aktuellt.js"></script>
+  <script src="./js/Biljetttyp.js"></script>
 </body>
 
 </html>
