Reworked alot with CSS

--- a/index.html
+++ b/index.html
@@ -19,19 +19,24 @@
   <script src="SeatsBookingView.js"></script> -->
 
   <header>
-    <nav>
+    <div class="logo">
       <a href="index.html">
-        <div class="logo">
-          <h1>FILMVISARNA!</h1>
-        </div>
+        <img class="logo-picture" src="images/logga.jpg" alt="">
       </a>
-      <div class="menu">
-        <a href="index.html">Hem</a>
-        <a href="kontakt.html">Kontakta oss</a>
-        <a href="omoss.html">Om oss</a>
-      </div>
-      <a class="login" href="login.html">login</a>
-    </nav>
+    </div>
+    <div class="nav-bar">
+      <p>©Filmvisarna</p>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Hem</a></li>
+          <li><a href="contact.html">Kontakta oss</a></li>
+          <li><a href="about-us.html">Om oss</a></li>
+        </ul>
+      </nav>
+      <a href="login.html"><button class="login">Logga in</button></a>
+    </div>
+    <!-- <div class="menu"> -->
+    <!-- </div> -->
   </header>
 
   <main>
@@ -86,7 +91,7 @@
   <script src="./js/SeatsbookingView.js"></script>
   <script src="./js/filmer.js"></script>
   <script src="./js/Aktuellt.js"></script>
-  <script src="./js/Biljetttyp.js"></script>
+  <script src="Biljetttyp.js"></script>
 </body>
 
 </html>
