--- a/html-partials/start.html
+++ b/html-partials/start.html
@@ -2,7 +2,6 @@
   <div class="firstcolumn">
     <h2>Aktuella Filmer</h2>
   </div>
-
   <div class="secondcolumn">
     <div class="moviecolumn">
       <img class="firstimage"
@@ -11,9 +10,9 @@
 
     <div class="partTwoSecondColumn" style="display:none;">
       <div class="schema">
-        <p class="schemarubrik"></p>
+      <p class="schemarubrik"></p>
         <div class="schedule"></div>
-
+        <!-- <div class="ADNANS"></div> -->
         <div align="center" class="seatingBooking">
           <p class="film"></p>
           <p class="salong"></p>
