--- a/html-partials/header.html
+++ b/html-partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="logo">
-    <a href="index.html">
+    <a href="#start">
       <img class="logo-picture" src="images/logga.jpg" alt="">
     </a>
   </div>
