Not completed. Still some bugfixes that need to be worked. Restyled the webpage abit

--- a/html-partials/footer.html
+++ b/html-partials/footer.html
@@ -6,6 +6,6 @@
     <p>0707-001020</p>
   </div>
   <div class="rightFoot">
-    <p><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
+    <p class="info-footer"><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
   </div>
 </footer>
