--- a/html-partials/start.html
+++ b/html-partials/start.html
@@ -1,19 +1,19 @@
 <main>
-  <div class="firstcolumn">
-    <h2>Aktuella Filmer</h2>
-  </div>
-  <div class="secondcolumn">
-    <div class="moviecolumn">
-      <img class="firstimage"
-        src="https://image.freepik.com/free-vector/vector-illustration-movie-time-background_44392-56.jpg" alt="" />
-    </div>
+  <!-- <div class="firstcolumn">
 
-    <div class="partTwoSecondColumn" style="display:none;">
+  </div> -->
+  <div class="secondcolumn">
+    <!-- <div class="moviecolumn"> -->
+    <!-- <img class="firstimage"
+        src="https://image.freepik.com/free-vector/vector-illustration-movie-time-background_44392-56.jpg" alt="" /> -->
+  </div>
+
+  <!-- <div class="partTwoSecondColumn" style="display:none;">
       <div class="schema">
-      <p class="schemarubrik"></p>
-        <div class="schedule"></div>
-        <!-- <div class="ADNANS"></div> -->
-        <div align="center" class="seatingBooking">
+        <p class="schemarubrik"></p>
+        <div class="schedule"></div> -->
+  <!-- <div class="ADNANS"></div> -->
+  <!-- <div align="center" class="seatingBooking">
           <p class="film"></p>
           <p class="salong"></p>
           <p class="dateTime"></p>
@@ -25,5 +25,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </main>
