--- a/html-partials/header.html
+++ b/html-partials/header.html
@@ -9,6 +9,7 @@
     <nav>
       <ul class="nav-links">
         <li><a href="#start">Hem</a></li>
+        <li><a href="#filmer">Filmer</a></li>
         <li><a href="#contact">Kontakta oss</a></li>
         <li><a href="#about-us">Om oss</a></li>
       </ul>
