--- a/html-partials/first.html
+++ b/html-partials/first.html
@@ -12,6 +12,11 @@
     <div class="partTwoSecondColumn" style="display:none;">
       <div class="schema">
         <p class="schemarubrik"></p>
+        <div class="ticketTypeNormal"></div>
+        <select id="ticket-dropdown" name="tickets">
+        </select>
+
+
         <div class="schedule"></div>
 
         <div align="center" class="seatingBooking">
