--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="./js/SeatsbookingView.js"></script>
   <script src="./js/filmer.js"></script>
   <script src="./js/Biljetttyp.js"></script>
+  <script src="./js/buildBooking.js"></script>
 
 </body>
 
