Cleaned up the code abit.

--- a/html-partials/about-us.html
+++ b/html-partials/about-us.html
@@ -1,7 +1,6 @@
 <main>
   <div class="secondcolumn">
-    <h2>Om oss</h2>
-    <h2>VILKA ÄR FILMVISARNA?</h2>
+    <h2>Vilka är Filmvisarna?</h2>
     <p><br>
       Vi visar film från hela världen, för alla åldrar. Filmer som roar och oroar, engagerar, skapar debatt och ger nya
       perspektiv. Kvalitet, engagemang och en bred representation i filmutbud och verksamhet genomsyrar allt vi gör.<br>
