--- a/html-partials/footer.html
+++ b/html-partials/footer.html
@@ -1,11 +1,6 @@
-<footer class="footer">
-  <div class="leftFoot">
-    <p>Vattenfallsgatan 15, Göteborg</p>
-  </div>
-  <div class="middleFoot">
-    <p>0707-001020</p>
-  </div>
-  <div class="rightFoot">
-    <p class="info-footer"><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
-  </div>
+<footer>
+  <p>Vattenfallsgatan 15, Göteborg</p>
+  <p>0707-001020</p>
+  <p class="info-footer"><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
+
 </footer>
