--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="./js/Aktuellt.js"></script>
   <script src="./js/SeatsbookingView.js"></script>
   <script src="./js/filmer.js"></script>
-  <script src="./js/Biljetttyp.js"></script>
+  <script src="./js/Biljettyp.js"></script>
   <script src="./js/buildBooking.js"></script>
 
 </body>
