testing spa-functionality

--- a/html-partials/contact.html
+++ b/html-partials/contact.html
@@ -1,7 +1,29 @@
-<main>
-  <h2>Kontakta oss</h2>
-  <p>
-    Assumenda ducimus temporibus aliquid tempora illo vitae mollitia doloremque
-    in accusantium veritatis nemo voluptatum? Vitae!
+<div class="secondcolumn">
+  <h2>Kontakta oss!</h2>
+  <p>Besöks/post/leveransadress: Filmvisarna, Vattenfallsgatan 15, 423 51 Göteborg<br>
+    Webbplats: filmvisarna.se<br>
+    <br>
+    Bokning och reklam<br>
+    Markus Johansson, mj@filmvisarna.se<br>
+    +46 31-12 08 82, mobil 0734 – 17 65 63<br>
+    <br>
+    FILM DIST, visningskopior, fildistribution <br>
+    Jesper Lundbäck, jl@filmvisarna.se<br>
+    031 – 12 08 82, mobil 0721 – 41 51 76<br>
+    <br>
+    Fakturering av filmhyror<br>
+    Adnan Kovacevic, ak@filmvisarna.se<br>
+    mobil 0724 – 56 04 02<br>
+    <br><br>
+
+
+    DISTRIBUTION & RIKSKANSLI<br>
+    Växel: 031-545 275 20<br>
+    e-post: info@filmvisarna.se<br>
+    Postadress: Filmvisarna, Box 17099, 423 62 Göteborg<br>
+    Besöks- & leveransadress: Vattenfallsgatan 15, 423 51 Göteborg<br>
+    <br>
+    Organisationsnummer:<br>
+    Filmvisarna AB 556571-2218<br>
   </p>
-</main>
+</div>
