--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Filmvisarna</title>
   <link rel="icon" type="image/png" href="/images/FV.png" />
@@ -20,11 +20,41 @@
 
 
   <script src="./js/main.js"></script>
-  <script src="./js/Aktuellt.js"></script>
+  <script src="./js/dynamicPages.js"></script>
+  <script src="./js/utils.js"></script>
+  <!-- <script src="./js/Aktuellt.js"></script> -->
   <script src="./js/SeatsbookingView.js"></script>
-  <script src="./js/filmer.js"></script>
-  <script src="./js/Biljettyp.js"></script>
-  <script src="./js/buildBooking.js"></script>
+  <!-- <script src="./js/filmer.js"></script> -->
+  <script src="./js/Biljetttyp.js"></script>
+  <script src="./js/storage.js"></script>
+
+  <header>
+    <div class="logo">
+      <a href="#start">
+        <img class="logo-picture" src="images/logga.jpg" alt="">
+      </a>
+    </div>
+    <div class="nav-bar">
+      <p>©Filmvisarna</p>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#start">Hem</a></li>
+          <li><a href="#filmer">Filmer</a></li>
+          <li><a href="#contact">Kontakta oss</a></li>
+          <li><a href="#about-us">Om oss</a></li>
+        </ul>
+      </nav>
+      <a href="login.html"><button class="login">Logga in</button></a>
+    </div>
+  </header>
+  <main>
+  </main>
+  <footer>
+    <p>Vattenfallsgatan 15, Göteborg</p>
+    <p>0707-001020</p>
+    <p class="info-footer"><a href="mailto:test@example.com">info@filmvisarna.se</a></p>
+
+  </footer>
 
 </body>
 
