--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-
-
-
-
   <script src="./js/main.js"></script>
   <script src="./js/dynamicPages.js"></script>
   <script src="./js/utils.js"></script>
+  <script src="./js/storage.js"></script>
   <!-- <script src="./js/Aktuellt.js"></script> -->
   <script src="./js/SeatsbookingView.js"></script>
   <!-- <script src="./js/filmer.js"></script> -->
-  <script src="./js/Biljetttyp.js"></script>
-  <script src="./js/storage.js"></script>
+  <!-- <script src="./js/Biljettyp.js"></script> -->
 
   <header>
     <div class="logo">
