refactored a small bit

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     </div>
   </header>
   <main>
+    <div class="secondcolumn">
+
+    </div>
   </main>
   <footer>
     <p>Vattenfallsgatan 15, Göteborg</p>
