--- a/html-partials/start.html
+++ b/html-partials/start.html
@@ -1,2 +1,37 @@
-<div class="secondcolumn">
-</div>
+<main>
+  <div class="firstcolumn">
+    <h2>Aktuella Filmer</h2>
+  </div>
+  <div class="secondcolumn">
+    <div class="moviecolumn">
+      <form>
+        <div class="ticketTypeNormal"></div>
+        <select id="ticket-dropdown-vuxna" name="tickets"></select>
+        <select id="ticket-dropdown-barn" name="tickets"></select>
+        <select id="ticket-dropdown-pensionar" name="tickets"></select>
+
+      </form>
+      <img class="firstimage"
+        src="https://image.freepik.com/free-vector/vector-illustration-movie-time-background_44392-56.jpg" alt="" />
+
+
+      <div class="partTwoSecondColumn" style="display:none;">
+        <div class="schema">
+          <p class="schemarubrik"></p>
+
+          <div class="schedule"></div>
+
+          <div align="center" class="seatingBooking">
+            <p class="film"></p>
+            <p class="salong"></p>
+            <p class="dateTime"></p>
+            <p class="nrSeats"></p>
+            <div class="summaryTickets"></div>
+            <div class="movieScreen" align="center">
+              <p>Bioduken</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</main>
