ticket in dynamic
Ticketropdown working in #bokning dynamic pages, loop dont function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- <script src="./js/Aktuellt.js"></script> -->
   <script src="./js/SeatsbookingView.js"></script>
   <!-- <script src="./js/filmer.js"></script> -->
-  <!-- <script src="./js/Biljettyp.js"></script> -->
+  <script src="./js/Biljettyp.js"></script>
 
   <header>
     <div class="logo">
