--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
     <script src="./js/SeatsbookingView.js"></script>
     <script src="./js/filmer.js"></script>
     <script src="./js/Biljettyp.js"></script>
-    <script src="./js/buildBooking.js"></script>
+    <!-- <script src="./js/buildBooking.js"></script> -->
     <script src="/best-sqlite3-frontend.js"></script>
   </body>
 </html>
