--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
   <!--Link for jQuery-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    
+
 
   <header>
     <div class="logo">
@@ -28,7 +28,19 @@
       <nav>
         <ul class="nav-links">
           <li><a href="#start">Hem</a></li>
-          <li><a href="#filmer">Filmer</a></li>
+          <li>
+            <div class="dropdown">
+              <button class="dropbtn">Filmer
+              </button>
+              <div class="dropdown-content">
+                <a href="#detailedView?Gladiator">Gladiator</a>
+                <a href="#detailedView?Braveheart">Braveheart</a>
+                <a href="#detailedView?Good Will Hunting">Good Will Hunting</a>
+                <a href="#detailedView?Big Hero 6">Big Hero 6</a>
+                <a href="#detailedView?The Dark Knight">The Dark Knight</a>
+              </div>
+            </div>
+          </li>
           <li><a href="#bokning">Boka direkt</a></li>
           <li><a href="#contact">Kontakta oss</a></li>
           <li><a href="#about-us">Om oss</a></li>
@@ -54,7 +66,7 @@
   <script src="./js/utils.js"></script>
   <script src="./js/storage.js"></script>
   <script src="./js/Aktuellt.js"></script>
-  
+
   <script src="./js/filmer.js"></script>
   <script src="./js/Biljettyp.js"></script>
 </body>
