--- a/www/index.html
+++ b/www/index.html
@@ -66,7 +66,7 @@
   <script src="./js/utils.js"></script>
   <script src="./js/storage.js"></script>
   <script src="./js/Aktuellt.js"></script>
-
+  <script arc="./js/loggin-registartion.js"></script>
   <script src="./js/filmer.js"></script>
   <script src="./js/Biljettyp.js"></script>
 </body>
