--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
           <li><a href="#about-us">Om oss</a></li>
         </ul>
       </nav>
-      <a href="login.html"><button class="login">Logga in</button></a>
+      <a href="#login"><button class="login">Logga in</button></a>
     </div>
   </header>
   <main>
@@ -66,7 +66,7 @@
   <script src="./js/utils.js"></script>
   <script src="./js/storage.js"></script>
   <script src="./js/Aktuellt.js"></script>
-  <script arc="./js/loggin-registartion.js"></script>
+  <script arc="./js/login-registration.js"></script>
   <script src="./js/filmer.js"></script>
   <script src="./js/Biljettyp.js"></script>
 </body>
