--- a/www/html-partials/registration.html
+++ b/www/html-partials/registration.html
@@ -6,23 +6,23 @@
     <div class="login">
       <table cellspacing="2" align="center" cellpadding="8" border="0">
         <tr>
-          <td align="right">Enter Name :</td>
-          <td><input type="text" placeholder="Skriv ditt namn här" id="t1" class="tb" /></td>
+          <td align="right">Skriv ditt namn här :</td>
+          <td><input type="text" placeholder="Namn" id="t1" class="tb" /></td>
         </tr>
         <tr>
-          <td align="right">Enter Email ID :</td>
-          <td><input type="text" placeholder="Skriv E-post här" id="t2" class="tb" /></td>
+          <td align="right">Skriv din E-post här :</td>
+          <td><input type="text" placeholder="E-post" id="t2" class="tb" /></td>
         </tr>
         <tr>
-          <td align="right">Enter Username :</td>
-          <td><input type="text" placeholder="Skriv användarnamn här" id="t3" class="tb" /></td>
+          <td align="right">Skriv användarnamn här :</td>
+          <td><input type="text" placeholder="Användarnamn" id="t3" class="tb" /></td>
         </tr>
         <tr>
-          <td align="right">Enter Password :</td>
-          <td><input type="password" placeholder="Skirv lösenord här" id="t4" class="tb" /></td>
+          <td align="right">Skriv lösenord här :</td>
+          <td><input type="password" placeholder="Lösenord" id="t4" class="tb" /></td>
         </tr>
         <tr>
-          <td align="right">Enter Confirm Password :</td>
+          <td align="right">Bekräfta lösenord :</td>
           <td><input type="password" placeholder="Bekräfta lösenord" id="t5" class="tb" /></td>
         </tr>
         <tr>
