--- a/www/html-partials/login.html
+++ b/www/html-partials/login.html
@@ -1,3 +1,25 @@
-<div>
-  <a href="#registration"><button class="registrera">registrera</button></a>
+<div class="secondcolumn">
+  <div>
+    <div class="login">
+      <div class="h-tag">
+        <table cellspacing="2" align="center" cellpadding="8" border="0">
+          <h4>Logga in med användarnamn och lösenord</h4>
+      </div>
+      <tr>
+        <td align="right">Logga in med anvädarnamn :</td>
+        <td><input type="text" placeholder="Användarnamn" id="t3" class="tb" /></td>
+      </tr>
+      <tr>
+        <td align="right">lösenord :</td>
+        <td><input type="password" placeholder="Lösenord" id="t4" class="tb" /></td>
+      </tr>
+      <tr>
+        <td align="right">logga in eller registrera :</td>
+        <td><a href="#loginUser"><button class="logiUser">Logga in</button></a>
+          <a href="#registration"><button class="registrera">registrera</button></a>
+        </td>
+      </tr>
+      </table>
+    </div>
+  </div>
 </div>
