--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,8 @@
         </ul>
       </nav>
       <a href="#login"><button class="login">Logga in</button></a>
+      <a href="#registration"><button class="login">registrera</button></a>
+
     </div>
   </header>
   <main>
