fixed a minor typo

--- a/www/html-partials/login.html
+++ b/www/html-partials/login.html
@@ -15,7 +15,7 @@
       </tr>
       <tr>
         <td align="right">logga in eller registrera :</td>
-        <td><a href="#loginUser"><button class="logiUser">Logga in</button></a>
+        <td><a href="#loginUser"><button class="loginUser">Logga in</button></a>
           <a href="#registration"><button class="registrera">registrera</button></a>
         </td>
       </tr>
