login now working
Creating accound work propper, saving input to string, and added alert messages

--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,7 @@
   <script src="./js/utils.js"></script>
   <script src="./js/storage.js"></script>
   <script src="./js/Aktuellt.js"></script>
-  <script arc="./js/login-registration.js"></script>
+  <script src="./js/login-registration.js"></script>
   <script src="./js/filmer.js"></script>
   <script src="./js/Biljettyp.js"></script>
 </body>
