changed styling, added media-queries for ipad + iphone X

--- a/www/index.html
+++ b/www/index.html
@@ -29,26 +29,31 @@
         <ul class="nav-links">
           <li><a href="#start">Hem</a></li>
           <li><a href="#start">
-            <div class="dropdown">
-              <button class="dropbtn">Filmer
-              </button></a>
-              <div class="dropdown-content">
-                <a href="#detailedView?Gladiator">Gladiator</a>
-                <a href="#detailedView?Braveheart">Braveheart</a>
-                <a href="#detailedView?Good Will Hunting">Good Will Hunting</a>
-                <a href="#detailedView?Big Hero 6">Big Hero 6</a>
-                <a href="#detailedView?The Dark Knight">The Dark Knight</a>
-              </div>
+              <div class="dropdown">
+                <button class="dropbtn">Filmer
+                </button>
+            </a>
+            <div class="dropdown-content">
+              <a href="#detailedView?Gladiator">Gladiator</a>
+              <a href="#detailedView?Braveheart">Braveheart</a>
+              <a href="#detailedView?Good Will Hunting">Good Will Hunting</a>
+              <a href="#detailedView?Big Hero 6">Big Hero 6</a>
+              <a href="#detailedView?The Dark Knight">The Dark Knight</a>
             </div>
-          </li>
-          <li><a href="#bokning">Boka direkt</a></li>
-          <li><a href="#contact">Kontakta oss</a></li>
-          <li><a href="#about-us">Om oss</a></li>
-        </ul>
-      </nav>
-      <a href="#login"><button class="login">Logga in</button></a>
-      <a href="#registration"><button class="login">registrera</button></a>
-
+    </div>
+    </li>
+    <li><a href="#bokning">Boka direkt</a></li>
+    <li><a href="#contact">Kontakta oss</a></li>
+    <li><a href="#about-us">Om oss</a></li>
+    <li><a href="#login">Logga in</a></li>
+    </ul>
+    <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
+    </nav>
+    <!-- <a href="#login"><button class="login">Logga in</button></a> -->
     </div>
   </header>
   <main>
