testing out new design

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,8 @@
   <title>Filmvisarna</title>
   <link rel="icon" type="image/png" href="/images/FV.png" />
   <link href="https://fonts.googleapis.com/css2?family=David+Libre&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -18,13 +20,14 @@
 
 
   <header>
-    <div class="logo">
+    <!-- <div class="logo">
       <a href="#start">
         <img class="logo-picture" src="images/logga.jpg" alt="">
       </a>
-    </div>
+    </div> -->
     <div class="nav-bar">
-      <p>©Filmvisarna</p>
+      <!-- <p>©Filmvisarna</p> -->
+      <p>Filmvisarna</p>
       <nav>
         <ul class="nav-links">
           <li><a href="#start">Hem</a></li>
