--- a/www/html-partials/header.html
+++ b/www/html-partials/header.html
@@ -1,9 +1,9 @@
 <header>
-  <div class="logo">
+  <!-- <div class="logo">
     <a href="index.html">
       <img class="logo-picture" src="images/logga.jpg" alt="">
     </a>
-  </div>
+  </div> -->
   <div class="nav-bar">
     <p>©Filmvisarna</p>
     <nav>
