--- a/www/html-partials/registration.html
+++ b/www/html-partials/registration.html
@@ -1,36 +1,40 @@
 <div class="secondcolumn">
-  <div id="regForm">
-    <form>
+  <div>
+    <div class="regform2">
       <div class="h-tag">
-        <h2>Skapa ditt konto</h2>
+        <h4>Skapa ditt konto <img src="images/FV.png" alt="FV" class="fvpic"></h4>
       </div>
-      <div class="regform2">
-        <table cellspacing="2" align="center" cellpadding="8" border="0">
-          <tr>
+      <table cellspacing="2" align="center" cellpadding="8" border="0">
+        <tr>
+          <td align="right"></td>
+          <td><input type="text" placeholder="Namn" id="t1" class="tb" /></td>
+        </tr>
+        <tr>
+          <td align="right"></td>
+          <td><input type="text" placeholder="E-post" id="t2" class="tb" /></td>
+        </tr>
+        <tr>
+          <td align="right"></td>
+          <td><input type="text" placeholder="Användarnamn" id="t3" class="tb" /></td>
+        </tr>
+        <tr>
+          <td align="right"></td>
 
-            <td><input type="text" placeholder="Namn" id="t1" class="tb" /></td>
-          </tr>
-          <tr>
-            <td><input type="text" placeholder="E-post" id="t2" class="tb" /></td>
-          </tr>
-          <tr>
-            <td><input type="text" placeholder="Användarnamn" id="t3" class="tb" /></td>
-          </tr>
-          <tr>
-            <td><input type="password" placeholder="Lösenord" id="t4" class="tb" /></td>
-          </tr>
-          <tr>
-            <td><input type="password" placeholder="Bekräfta lösenord" id="t5" class="tb" /></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td>
-              <input type="reset" value="Clear Form" onclick="clearFunc()" id="res" class="btn" />
-              <input type="submit" value="Create Account" class="btn" onclick="registration() ;insert()" />
-            </td>
-          </tr>
-        </table>
-      </div>
-    </form>
+          <td><input type="password" placeholder="Lösenord" id="t4" class="tb" /></td>
+        </tr>
+        <tr>
+          <td align="right"></td>
+          <td><input type="password" placeholder="Bekräfta lösenord" id="t5" class="tb" /></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <input type="reset" value="Clear Form" onclick="clearFunc()" id="res" class="btn" />
+            <input type="submit" value="Create Account" class="btn" onclick="registration()" />
+          </td>
+        </tr>
+      </table>
+    </div>
+
   </div>
 </div>
