fixed some stuff
Fixed reload page, so we get so same page in reload,
fixed loginform responsive
and fixed nav dropdown z-index

--- a/www/html-partials/registration.html
+++ b/www/html-partials/registration.html
@@ -29,8 +29,8 @@
         <tr>
           <td></td>
           <td>
-            <input type="reset" value="Clear Form" onclick="clearFunc()" id="res" class="btn" />
-            <input type="submit" value="Create Account" class="btn" onclick="registration()" />
+            <button type="reset" onclick="clearFunc()" id="res" class="btn">Rensa</button>
+            <button type="submit" class="btn" onclick="registration()">Skapa</button>
           </td>
         </tr>
       </table>
