--- a/www/html-partials/registration.html
+++ b/www/html-partials/registration.html
@@ -2,7 +2,7 @@
   <div>
     <div class="regform2">
       <div class="h-tag">
-        <h4>Skapa ditt konto <img src="images/FV.png" alt="FV" class="fvpic"></h4>
+        <h4>Skapa ditt konto <img src="images/FVwhite.png" alt="FV" class="fvpic"></h4>
       </div>
       <table cellspacing="2" align="center" cellpadding="8" border="0">
         <tr>
