added new tex in reg account
changed konto to skapa konto in reg from button and added button color

--- a/www/html-partials/registration.html
+++ b/www/html-partials/registration.html
@@ -30,7 +30,7 @@
           <td></td>
           <td>
             <button type="reset" onclick="clearFunc()" id="res" class="btn">Rensa</button>
-            <button type="submit" class="btn" onclick="registration()">Skapa</button>
+            <button type="submit" class="btn" onclick="registration()">Skapa konto</button>
           </td>
         </tr>
       </table>
