--- a/www/html-partials/registration.html
+++ b/www/html-partials/registration.html
@@ -6,8 +6,8 @@
       </div>
       <table cellspacing="2" align="center" cellpadding="8" border="0">
         <tr>
-          <td align="right"></td>
-          <td><input type="text" placeholder="Namn" id="t1" class="tb" /></td>
+          <td class="pw" align="right"></td>
+          <td><input type="text" placeholder="Fullständigt namn" id="t1" class="tb" /></td>
         </tr>
         <tr>
           <td align="right"></td>
