Fixed styling, added "our team"

--- a/www/html-partials/about-us.html
+++ b/www/html-partials/about-us.html
@@ -1,12 +1,56 @@
 <div class="secondcolumn">
-  <h2>Vilka är Filmvisarna?</h2>
-  <p><br>
-    Vi visar film från hela världen, för alla åldrar. Filmer som roar och oroar, engagerar, skapar debatt och ger nya
-    perspektiv. Kvalitet, engagemang och en bred representation i filmutbud och verksamhet genomsyrar allt vi gör.<br>
-    <br>
-    Med egna biografer och egen distribution garanterar Filmvisarna att ett brett spektrum av filmer når en publik
-    utan att behöva prövas mot strikt kommersiella krav.<br>
-    <br>
-    Filmvisarna startades 2021 för att visa de bästa filmerna just nu.<br>
-  </p>
+  <div class="about-us">
+    <h2>Vilka är Filmvisarna?</h2>
+    <p><br>
+      Vi visar film från hela världen, för alla åldrar. Filmer som roar och oroar, engagerar, skapar debatt och ger nya
+      perspektiv. Kvalitet, engagemang och en bred representation i filmutbud och verksamhet genomsyrar allt vi gör.<br>
+      <br>
+      Med egna biografer och egen distribution garanterar Filmvisarna att ett brett spektrum av filmer når en publik
+      utan att behöva prövas mot strikt kommersiella krav.<br>
+      <br>
+      Filmvisarna startades 2021 för att visa de bästa filmerna just nu.<br>
+    </p>
+  </div>
+  <h3 class="team">Vårat Team</h3>
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <img src="../images/Markus.png" id="img-card">
+        <div class="container">
+          <h2>Markus</h2>
+          <p class="title">Bokning & Reklam</p>
+          <p>text about me</p>
+          <p><a href="tel:0707010201">0707-010201</a><img src="../images/phone.png" id="phone-img"></p>
+          <p><a href="mailto:mj@filmvisarna.se"><button class="button-contact">Kontakta mig</button></a></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="../images/jesper1.jpg" id="img-card">
+        <div class="container">
+          <h2>Jesper</h2>
+          <p class="title">Film Distribution</p>
+          <p>text about me</p>
+          <p><a href="tel:0707010202">0707-010202</a><img src="../images/phone.png" id="phone-img"></p>
+          <p><a href="mailto:jl@filmvisarna.se"><button class="button-contact">Kontakta mig</button></a></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="../images/profile.jpg" id="img-card">
+        <div class="container">
+          <h2>Adnan</h2>
+          <p class="title">Fakturering</p>
+          <p>text about me</p>
+          <p><a href="tel:0707010203">0707-010203</a><img src="../images/phone.png" id="phone-img"></p>
+          <p><a href="mailto:ak@filmvisarna.se"><button class="button-contact">Kontakta mig</button></a></p>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
