--- a/www/html-partials/contact.html
+++ b/www/html-partials/contact.html
@@ -1,29 +1,38 @@
 <div class="secondcolumn">
-  <h2>Kontakta oss!</h2>
-  <p>Besöks/post/leveransadress: Filmvisarna, Vattenfallsgatan 15, 423 51 Göteborg<br>
-    Webbplats: filmvisarna.se<br>
+  <div class="contact">
+    <h2>Kontakta oss</h2>
     <br>
-    Bokning och reklam<br>
-    Markus Johansson, mj@filmvisarna.se<br>
-    +46 31-12 08 82, mobil 0734 – 17 65 63<br>
-    <br>
-    FILM DIST, visningskopior, fildistribution <br>
-    Jesper Lundbäck, jl@filmvisarna.se<br>
-    031 – 12 08 82, mobil 0721 – 41 51 76<br>
-    <br>
-    Fakturering av filmhyror<br>
-    Adnan Kovacevic, ak@filmvisarna.se<br>
-    mobil 0724 – 56 04 02<br>
-    <br><br>
+    <div class="markus">
+      <h3>Bokning och reklam</h3>
+      <h4>Markus Johansson</h4>
+      <p>E-post: <a href="mailto:mj@filmvisarna.se">mj@filmvisarna.se</a></p>
+      <p>Telefon: 0707-010201</p><br>
+      <br>
+    </div>
+    <div class="jesper">
+      <h3>Film Distribution, Visningskopior, Fildistribution</h3>
+      <h4>Jesper Lundbäck</h4>
+      <p>E-post: <a href="mailto:jl@filmvisarna.se">jl@filmvisarna.se</a></p>
+      <p>Telefon: 0707-010202</p><br>
+      <br>
+    </div>
+    <div class="adnan">
+      <h3>Fakturering av filmhyror</h3>
+      <h4>Adnan Kovacevic</h4>
+      <p>E-post: <a href="mailto:ak@filmvisarna.se">ak@filmvisarna.se</a></p>
+      <p>Telefon: 0707-010203</p><br>
+      <br><br>
+    </div>
 
 
-    DISTRIBUTION & RIKSKANSLI<br>
-    Växel: 031-545 275 20<br>
-    e-post: info@filmvisarna.se<br>
-    Postadress: Filmvisarna, Box 17099, 423 62 Göteborg<br>
-    Besöks- & leveransadress: Vattenfallsgatan 15, 423 51 Göteborg<br>
-    <br>
-    Organisationsnummer:<br>
-    Filmvisarna AB 556571-2218<br>
-  </p>
-  </main>
+    <h3>DISTRIBUTION & RIKSKANSLI</h3><br>
+    <p>Växel: 031-545 275 20<br>
+      e-post: info@filmvisarna.se<br>
+      Postadress: Filmvisarna, Box 17099, 423 62 Göteborg<br>
+      Besöks- & leveransadress: Vattenfallsgatan 15, 423 51 Göteborg<br>
+      <br>
+      Organisationsnummer:<br>
+      Filmvisarna AB 556571-2218<br>
+    </p>
+  </div>
+</div>
