user database connected and working

--- a/www/html-partials/registration.html
+++ b/www/html-partials/registration.html
@@ -2,12 +2,22 @@
   <div>
     <div class="regform2">
       <div class="h-tag">
-        <h4>Skapa ditt konto <img src="images/FVwhite.png" alt="FV" class="fvpic"></h4>
+        <h4>
+          Skapa ditt konto
+          <img src="images/FVwhite.png" alt="FV" class="fvpic" />
+        </h4>
       </div>
       <table cellspacing="2" align="center" cellpadding="8" border="0">
         <tr>
           <td class="pw" align="right"></td>
-          <td><input type="text" placeholder="Fullständigt namn" id="t1" class="tb" /></td>
+          <td>
+            <input
+              type="text"
+              placeholder="Fullständigt namn"
+              id="t1"
+              class="tb"
+            />
+          </td>
         </tr>
         <tr>
           <td align="right"></td>
@@ -15,26 +25,40 @@
         </tr>
         <tr>
           <td align="right"></td>
-          <td><input type="text" placeholder="Användarnamn" id="t3" class="tb" /></td>
+          <td>
+            <input type="text" placeholder="Användarnamn" id="t3" class="tb" />
+          </td>
         </tr>
         <tr>
           <td align="right"></td>
 
-          <td><input type="password" placeholder="Lösenord" id="t4" class="tb" /></td>
+          <td>
+            <input type="password" placeholder="Lösenord" id="t4" class="tb" />
+          </td>
         </tr>
         <tr>
           <td align="right"></td>
-          <td><input type="password" placeholder="Bekräfta lösenord" id="t5" class="tb" /></td>
+          <td>
+            <input
+              type="password"
+              placeholder="Bekräfta lösenord"
+              id="t5"
+              class="tb"
+            />
+          </td>
         </tr>
         <tr>
           <td></td>
           <td>
-            <button type="reset" onclick="clearFunc()" id="res" class="btn">Rensa</button>
-            <button type="submit" class="btn" onclick="registration()">Skapa konto</button>
+            <button type="reset" id="resetreg" id="res" class="btn">
+              Rensa
+            </button>
+            <button type="submit" id="submitreg" class="btn">
+              Skapa konto
+            </button>
           </td>
         </tr>
       </table>
     </div>
-
   </div>
 </div>
