added adnan picture

--- a/www/html-partials/about-us.html
+++ b/www/html-partials/about-us.html
@@ -41,7 +41,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="../images/profile.jpg" id="img-card">
+        <img src="../images/Adnan.jpg" id="img-card">
         <div class="container">
           <h2>Adnan</h2>
           <p class="title">Fakturering</p>
