login function working, testing database retrieval

--- a/www/html-partials/login.html
+++ b/www/html-partials/login.html
@@ -15,7 +15,10 @@
         </tr>
         <tr>
           <td align="right"></td>
-          <td><a href="#loginUser"><button class="loginUser">Logga in</button></a>
+          <td>
+
+            <button class="loginUser">Logga in</button>
+
             <a href="#registration"><button class="registrera">Registrera</button></a>
           </td>
         </tr>
