--- a/www/index.html
+++ b/www/index.html
@@ -73,9 +73,9 @@
   <script src="./js/utils.js"></script>
   <script src="./js/login-registration.js"></script>
   <script src="./js/storage.js"></script>
-  <script src="./js/Aktuellt.js"></script>
+  <!-- <script src="./js/Aktuellt.js"></script>
   <script src="./js/filmer.js"></script>
-  <script src="./js/Biljettyp.js"></script>
+  <script src="./js/Biljettyp.js"></script> -->
 </body>
 
 </html>
