--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
     <li><a href="#bokning">Boka direkt</a></li>
     <li><a href="#contact">Kontakta oss</a></li>
     <li><a href="#about-us">Om oss</a></li>
-    <li><a href="#login">Logga in</a></li>
+    <li class="login-page"><a href="#login">Logga in</a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
